<resources>
    <string name="app_name">Esep</string>
    <string name="product_list">Список товаров</string>
    <string name="sales_history">История продаж</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_products">Мои товары</string>
    <string name="search">Поиск</string>
    <string name="product_detail">Детали товара</string>
    <string name="in_stock">В наличии:</string>

    <string name="add_product">Добавьте товар</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>

    <string name="add_name">Введите название </string>
    <string name="add_price">Введите продажную цену </string>
    <string name="add_cost_price">Введите себестоимость </string>
    <string name="add_incoming_number">Введите количество</string>
    <string name="sell_product">Продажа товара</string>
    <string name="sold_date">Дата продажи</string>
    <string name="close">Закрыть</string>
    <string name="price">ЦЕНА</string>
    <string name="count">КОЛИЧЕСТВО</string>
    <string name="som">сом</string>
    <string name="save">Сохранить</string>
    <string name="sht">шт.</string>
    <string name="sell">Продать</string>
    <string name="edit">Редактировать</string>
    <string name="cost_price">Себестоимость:</string>
    <string name="price_dot">Цена:</string>
    <string name="sell_dot">Продано:</string>
    <string name="incame">Пришло:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Добро пожаловать !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="total">Итого:</string>
    <string name="sales_number">Кол-во продаж:</string>
    <string name="proceed">Выручка:</string>
    <string name="make_account">Создать аккаунт</string>
    <string name="slogan">Надежно и просто</string>
    <string name="name">Эсеп</string>
    <string name="login">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="log_in">Логин</string>
    <string name="password">Пароль</string>
    <string name="key">Ключ владельца</string>
    <string name="already_have_account">Уже есть аккаунт</string>
    <string name="ready">Готово</string>
    <string name="dont_have_account">Ещё нет аккаунта</string>
    <string name="then">Далее</string>
    <string name="who_are_you">Кем вы являетесь ?</string>
    <string name="back">Назад</string>
    <string name="analytics">Аналитика</string>
    <string name="reset_sale_history">Вы точно хотите\nстереть историю продаж?</string>
</resources>