<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_alert_dialog">

    <TextView
        android:id="@+id/header"
        style="@style/title_style"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16_dp"
        android:layout_marginTop="@dimen/margin_24_dp"
        android:layout_marginEnd="@dimen/margin_16_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/add_product" />


    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16_dp"
        android:maxLines="1"
        android:background="@null"
        android:hint="Введите название товара"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="number"
        android:layout_margin="@dimen/margin_16_dp"
        android:background="@null"
        android:hint="Введите цену товара"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_cost_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="number"
        android:layout_margin="@dimen/margin_16_dp"
        android:background="@null"
        android:hint="@string/add_cost_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_price" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="number"
        android:layout_margin="@dimen/margin_16_dp"
        android:background="@null"
        android:hint="@string/add_incoming_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cost_price" />

    <Button
        android:id="@+id/negative"
        style="@style/negativeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16_dp"
        android:layout_marginBottom="@dimen/margin_16_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/positive"
        app:layout_constraintTop_toTopOf="@+id/positive"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_number"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_24_dp"
        android:layout_marginEnd="@dimen/margin_16_dp"
        android:layout_marginBottom="@dimen/margin_16_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/positiveButton"
        android:text="@string/add"/>

</androidx.constraintlayout.widget.ConstraintLayout>