<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageButton
        android:id="@+id/btn_left_detail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/detail_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:layout_marginEnd="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:maxLength="20"
        app:layout_constraintStart_toEndOf="@id/btn_left_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/btn_left_detail"
        app:layout_constraintBottom_toBottomOf="@id/btn_left_detail"
        tools:text="T-Shirt Zara"
        style="@style/title_style"
        android:layout_marginStart="16dp"/>

    <View
        android:id="@+id/gray_line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/color_gray"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/detail_item_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gray_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        style="@style/subtitle_bold_style"
        android:text="@string/in_stock"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/count"
        app:layout_constraintBottom_toBottomOf="@id/count"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        style="@style/subtitle_regular_style"
        android:text="@string/incame"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/soldCount"
        app:layout_constraintBottom_toBottomOf="@id/soldCount"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        style="@style/subtitle_regular_style"
        android:text="@string/sell_dot"/>

    <TextView
        android:id="@+id/availableCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gray_line"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/subtitle_bold_style"
        tools:text="12 шт."/>

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/availableCount"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/subtitle_regular_style"
        tools:text="20 шт."/>

    <TextView
        android:id="@+id/soldCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/count"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/subtitle_regular_style"
        tools:text="8 шт."/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/price"
        app:layout_constraintBottom_toBottomOf="@id/price"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        style="@style/subtitle_bold_style"
        android:text="@string/price_dot"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/costPrice"
        app:layout_constraintBottom_toBottomOf="@id/costPrice"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        style="@style/subtitle_regular_style"
        android:text="@string/cost_price"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/soldCount"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/subtitle_bold_style"
        tools:text="200 сом"/>

    <TextView
        android:id="@+id/costPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/price"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/subtitle_regular_style"
        tools:text="180 сом"/>


    <Button
        android:id="@+id/btn_detail_edit"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_detail_sell"
        android:text="@string/edit"
        style="@style/positiveButton"
        android:background="@drawable/custom_btn_detail"/>

    <Button
        android:id="@+id/btn_detail_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btn_detail_edit"
        app:layout_constraintBottom_toBottomOf="@id/btn_detail_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_detail_edit"
        android:text="@string/sell"
        style="@style/positiveButton"
        android:background="@drawable/custom_btn_detail"/>
</androidx.constraintlayout.widget.ConstraintLayout>